--- a/TVS_Server/TVS_Server.csproj
+++ b/TVS_Server/TVS_Server.csproj
@@ -3,6 +3,10 @@
     <OutputType>Exe</OutputType>
     <TargetFrameworks>netcoreapp2.0;net472</TargetFrameworks>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp2.0|AnyCPU'">
+    <LangVersion>7.3</LangVersion>
+    <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
+  </PropertyGroup>
   <ItemGroup>
     <Compile Update="**\*.xaml.cs">
       <DependentUpon>%(Filename)</DependentUpon>
