--- a/TVS_Server/TVS_Server.csproj
+++ b/TVS_Server/TVS_Server.csproj
@@ -4,7 +4,7 @@
     <TargetFrameworks>netcoreapp2.0;net472</TargetFrameworks>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp2.0|AnyCPU'">
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>latest</LangVersion>
     <CheckForOverflowUnderflow>false</CheckForOverflowUnderflow>
   </PropertyGroup>
   <ItemGroup>
@@ -20,5 +20,6 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.6.1" />
     <PackageReference Include="NETStandard.HttpListener" Version="1.0.3.5" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+    <PackageReference Include="NReco.VideoConverter" Version="1.1.3" />
   </ItemGroup>
 </Project>
